--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
         <label for="second-number-input">Number 2</label>
         <input type="number"  class="input" id="second-number-input"/>
         <label for="result">Result</label>
-        <div  class="input" id="result"></div>
+        <div  id="result"></div>
 
         <div id="button-box">
             <button class="button" id="plus">+</button>
             <button class="button" id="minus">-</button>
             <button class="button" id="divide">/</button>
             <button class="button" id="multiply">x</button>
+            <button class="button" id="clear">c</button>
             </div>
-
-
     </div>
 
 
